# poc-rust-rocket

./: BUILDING.md  Cargo.toml  README.md  openapi3.yaml
src/: lib.rs  main.rs
src/apis/: table.rs
src/models/: coord.rs  data_cell.rs  data_table.rs  error.rs  error_cell.rs  error_table.rs  table_update_request.rs  table_update_response.rs
